--- a/src/app/login/login.module.css
+++ b/src/app/login/login.module.css
@@ -1,6 +1,6 @@
 .loginContainer{
     width: 100%;
-    min-height: 100vh;
+    height: 100vh;
     background-color: whitesmoke;
     display: flex;
     cursor: default;
@@ -164,4 +164,40 @@ margin-top: 50px;
 
 .leftSideBanner{
     min-width: 30%;
+    height: 100vh;
+}
+
+.leftSideBanner .sideLogo{
+    width: 100%;
+    height: 100vh;
+
+}
+
+
+@media (width < 600px) {
+
+    .subContainer{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        padding: 10px;
+        position: relative;
+        height: 100vh;
+        /* border: 1px solid red; */
+    }
+    
+.loginForm{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 80px 20px;
+
+    
+}
+
+    .leftSideBanner  .sideLogo{
+        display: none;
+    }
 }
