--- a/src/app/signup/signup.module.css
+++ b/src/app/signup/signup.module.css
@@ -148,6 +148,47 @@ margin-top: 50px;
 }
 
 .leftSideBanner{
-    max-width: 30%;
+    min-width: 30%;
     height: 100vh;
+}
+
+.leftSideBanner .sideLogo{
+    width: 100%;
+    height: 100vh;
+
+}
+
+
+@media (width < 600px) {
+
+    .subContainer{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 10px;
+        position: relative;
+        height: 100vh;
+        /* border: 1px solid red; */
+    }
+    
+.signupForm{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 80px 20px;
+    border: 1px solid red;
+    
+}
+
+.arrowLeftImg{
+    position: absolute;
+    right: 12px;
+    bottom: 300px;
+    cursor: pointer;
+}
+
+    .leftSideBanner  .sideLogo{
+        display: none;
+    }
 }
