--- a/src/app/login/login.module.css
+++ b/src/app/login/login.module.css
@@ -11,8 +11,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 80px;
-    
+    padding-top: 80px;    
 }
 
 .logo{
@@ -36,7 +35,7 @@
 }
 
 .buttons{
-    min-width: 300px;
+    min-width: 280px;
     height: 60px;
 }
 
@@ -174,7 +173,7 @@ margin-top: 50px;
 }
 
 
-@media (width < 600px) {
+@media (min-width: 0px) and (max-width: 600px) {
 
     .subContainer{
         display: flex;
@@ -184,7 +183,7 @@ margin-top: 50px;
         padding: 10px;
         position: relative;
         height: 100vh;
-        /* border: 1px solid red; */
+        margin-top: 100px;
     }
     
 .loginForm{
@@ -192,7 +191,7 @@ margin-top: 50px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 80px 20px;
+    padding: 80px 15px;
 
     
 }
