--- a/src/components/maps/map.module.css
+++ b/src/components/maps/map.module.css
@@ -1,5 +1,5 @@
 .mapImg{
-    width: 800px; 
+    max-width: 1500px; 
     height: 350px; 
     border-radius: 12px
 }
@@ -21,24 +21,23 @@
 
 @media (min-width: 0px) and (max-width: 600px) {
     .mapImg{
-        width: 300px; 
-        height: 300px; 
+        width: 250px; 
+        height: 250px; 
         border-radius: 12px
     }
 
     .vectormap{
         position: absolute; 
-        width: 200px; 
+        width: 160px; 
         bottom: 0px; 
-        left: 300px;
-        right: 0px;
+        left: 50px;
     }
 
     .ellipse{
         position: absolute; 
-        width: 50px; 
-        top: 120px; 
-        left: 410px;
+        width: 40px; 
+        top: 100px; 
+        left: 130px;
     }
 
 } 
@@ -70,9 +69,72 @@
 
 @media (min-width: 900px) and (max-width: 1200px) {
 
+    .mapImg{
+        width: 750px; 
+        height: 350px; 
+        border-radius: 12px
+    }
+    
+    .vectormap{
+        position: absolute; 
+        width: 300px; 
+        bottom: 0px; 
+        left: 150px;
+    }
+    
+    .ellipse{
+        position: absolute; 
+        width: 50px; 
+        top: 90px; 
+        left: 320px;
+    }
+
 } 
 
 
 @media (min-width: 1200px) and (max-width: 1536px) {
+    .mapImg{
+        width: 850px; 
+        height: 350px; 
+        border-radius: 12px
+    }
+    
+    .vectormap{
+        position: absolute; 
+        width: 300px; 
+        bottom: 0px; 
+        left: 150px;
+    }
+    
+    .ellipse{
+        position: absolute; 
+        width: 50px; 
+        top: 90px; 
+        left: 320px;
+    }
 
+} 
+
+
+@media (min-width: 1536px) {
+    .mapImg{
+        width: 1500px; 
+        height: 350px; 
+        border-radius: 12px
+    }
+    
+    .vectormap{
+        position: absolute; 
+        width: 300px; 
+        bottom: 0px; 
+        left: 500px;
+    }
+    
+    .ellipse{
+        position: absolute; 
+        width: 50px; 
+        top: 90px; 
+        left: 680px;
+    }
+    
 } 
