--- a/src/components/chart/chart.module.css
+++ b/src/components/chart/chart.module.css
@@ -18,3 +18,11 @@
         height: 200px;
     }
 } 
+
+@media (min-width: 1536px) {
+
+    .chartImg{
+        width: 650px;
+        height: 300px;
+    }
+} 
