working on responsive

--- a/src/components/chart/graph.module.css
+++ b/src/components/chart/graph.module.css
@@ -10,9 +10,9 @@
 
 .Line2Img{
     position: absolute;
-    width: 720px;
+    width: 680px;
     bottom: 130px;
-    left: 50px;
+    left: 90px;
 }
 
 .vectorImg{
@@ -25,21 +25,21 @@
 .chartValue1{
     position: absolute; 
     top: 20px; 
-    left: 20px;
+    left: 50px;
    list-style-type: none;
    font-weight: bold;
 }
 .chartValue2{
     position: absolute; 
     top: 90px; 
-    left: 20px;
+    left: 50px;
    list-style-type: none;
    font-weight: bold;
 }
 .chartValue3{
     position: absolute; 
     bottom: 10px;
-    left: 20px;
+    left: 50px;
    list-style-type: none;
    font-weight: bold;
 }
@@ -128,7 +128,7 @@
 @media (min-width: 900px) and (max-width: 1200px) {
 
     .lineImg{
-        width: 800px;
+        width: 600px;
     }
 
     .chartImg{
@@ -137,22 +137,17 @@
     }
     .Line2Img{
         position: absolute;
-        width: 200px;
-        height: 2px;
+        width: 500px;
+        height: 4px;
         bottom: 130px;
         left: 60px;
     }
-} 
 
-
-@media (min-width: 1200px) and (max-width: 1536px) {
-
-    .lineImg{
-        width: 800px;
-    }
-
-    .chartImg{
-        width: 750px;
-        height: 250px;
+    .vectorImg{
+        position: absolute;
+        width: 450px;
+        bottom: 90px;
+        left: 110px;
     }
 } 
+ 
